[package]
name = "espera"
description = "Time management, loop rates control."
version = "0.4.0"
edition = "2021"
rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/espera"
documentation = "https://docs.rs/espera"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
categories = ["date-and-time", "no-std"]
keywords = ["time", "sleep", "loop", "rate", "fps"]
publish = true

# ------------------------------------------------------------------------------

[features]

#* capability features *#
default = []
full = [] # enables optional capabilities in this crate (unused)
full_std = ["full", "std"]
full_no_std = ["full", "no_std", "libc"]

#* environment features *#
std = [ # disables `no_std` compatibility and enables `std` functionality
	"alloc",
	"ahash", "arraydeque", "sixbit", "time/std", "spin_sleep",
]
alloc = [] # enables `alloc` functionality
no_std = ["libm"] # enables functionality incompatible with `std`
# wasm = ["instant"]

#* safety features *#
unsafest = ["unsafe", "devela/unsafest"] # enables unsafe recursively
unsafe = [] # enables unsafe features in this crate
	# used together with `libc` for `no_std` unixtime (IMPROVE)
safe = [] # forbids unsafe in this crate
safest = ["safe", "devela/safest"] # forbids unsafe recursively

#* nightly features *#
nightly = [] # enables nightly features
nightly_docs = [ # enables features for docs.rs
	"nightly", "full_std", "unsafe", "devela/nightly_docs",
]

# ------------------------------------------------------------------------------

[dependencies]
devela = "0.9.0"
time = { version = "0.3.28", default-features = false }
log = "0.4.20"

#* optional dependencies *#
# std:
ahash = { version = "0.8.3", optional = true }
arraydeque = { version = "0.4.5", optional = true }
sixbit = { version = "0.5.0", optional = true }
spin_sleep = { version = "1.1.1", optional = true }
# no_std:
libc = { version = "0.2", optional = true, default-features = false }
libm = { version = "0.2.7", optional = true }
# wasm:
# instant = { version = "0.1.12", optional = true }

# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }
